--- a/app/components/footer/footer.module.css
+++ b/app/components/footer/footer.module.css
@@ -1,5 +1,14 @@
 .inicial{
     background-color: rgb(240, 240, 240);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    
+}
+
+.footer{
+    justify-content: space-around;
+    
 }
 
 .copyright{
@@ -13,8 +22,6 @@
     text-align: center;
     font-size: 20px;
     margin-top: 20px;
-   
-
 }
 
 .links{
@@ -26,6 +33,7 @@
     display: flex;
     font-family: 20px;
 }
+
 .titulo{
     font-size: 32px;
     font-weight: bold;
@@ -38,7 +46,6 @@
     padding-top: 50px;
  }
  
-
 .containerlinks{
     margin-left: 67rem;
     margin-bottom: 80px;
