--- a/app/components/footer/footer.module.css
+++ b/app/components/footer/footer.module.css
@@ -3,50 +3,33 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    
 }
-
-.footer{
-    justify-content: space-around;
-    
-}
-
-.copyright{
-    background-color: rgb(237, 231, 231);
-    height: 50px;
-    padding-top: 2px;
-    font-weight: bold;
-}
-
-.pcopyright{
-    text-align: center;
-    font-size: 20px;
-    margin-top: 20px;
-}
-
-.links{
-    text-decoration: none;
-    padding: 10px;
-    margin-left: -0.5rem;
-    color: black;
-    flex-direction: column;
-    display: flex;
-    font-family: 20px;
-}
-
-.titulo{
-    font-size: 32px;
-    font-weight: bold;
-}
-
- .img{
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding-top: 50px;
- }
- 
 .containerlinks{
-    margin-left: 67rem;
-    margin-bottom: 80px;
+    margin-left: 80%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10vh;
+}
+.titulo{
+    font-size: 40px;
+    font-weight: bold;
+}
+.links{
+    margin: 5px;
+    color: black;
+    font-size: 20px;
+    margin-left: 11vh;
+}
+.copyright{
+    background-color: rgb(204, 204, 204);
+}
+.pcopyright{
+    font-size: 25px;
+    text-align: center;
+    font-weight: bold;
+}
+.img{
+    align-items: center;
+    text-align: center;
+
 }
