--- a/app/components/popup/popup.module.css
+++ b/app/components/popup/popup.module.css
@@ -1,5 +1,5 @@
 .mainDiv {
-    width: 10rem;
+    height: 2rem;
     padding-left: 5rem;
     padding-right: 5rem;
     color: white;
@@ -8,7 +8,10 @@
     position: fixed;
     bottom: 0;
     left: 50%;
-    transform: translate(-50%, -50%); 
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .error {
