--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,6 +3,7 @@
     align-items: center;
     border-radius: 10px;
     width: 46rem;
+    display: flex;
     flex-direction: column;
     padding: 20px;
     margin-bottom: 5rem;
